Bugzilla #6755 <https://bugs.freedesktop.org/show_bug.cgi?id=6755> Patch     #5536 <https://bugs.freedesktop.org/attachment.cgi?id=5536>: Change HostDataBlit interface to take dst_offset_pitch and coordinates     instead of just a destination pointer, as the latter is not sufficient     with tiling. Also, use HW clipping to avoid overwriting destination     data outside of the specified width. Adapt to new HostDataBlit interface. This fixes corruption with     UploadToScreen to the front buffer (from exaPutImage).